--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = knet.settings
 norecursedirs = .* _* selenium node_modules
-addopts = --cov-report html --cov knet --tb short
+addopts = --cov-report term --cov-report html --cov knet --tb short
 minversion = 2.3.4
