--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "grunt-contrib-watch": "~0.4.3",
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-qunit-istanbul": "git://github.com/oddbird/grunt-qunit-istanbul.git#just-write-report-once",
-    "grunt-shell": "~0.2.2"
-  }
+    "grunt-shell": "~0.2.2",
+    "grunt-contrib-handlebars": "~0.5.9"
+  },
+  "dependencies": {}
 }
