--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-qunit-istanbul": "git://github.com/oddbird/grunt-qunit-istanbul.git#just-write-report-once",
-    "grunt-shell": "~0.2.2",
-    "grunt-contrib-handlebars": "~0.5.9"
+    "grunt-shell": "~0.3.1",
+    "grunt-contrib-handlebars": "~0.5.10",
+    "grunt-contrib-compass": "~0.3.0"
   },
   "dependencies": {}
 }
